--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,14 @@ body {
 }
 
 a {
-    color: #5c7284;
+    color: #2F4558;
     text-decoration: none;
     border-bottom: 1px solid transparent;
 }
 
 a:hover {
-    border-bottom: 1px solid #91D13E;
-    color: #91D13E;
+    border-bottom: 1px solid #2F4558;
+    color: #2F4558;
 }
 
 a,
@@ -35,6 +35,13 @@ button {
 a:focus,
 a:hover {
     text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'mplus1p', sans-serif;
 }
 
 .owl-feedback-form input,
@@ -90,6 +97,87 @@ button.btn-close {
     font-size: 22px;
 }
 
+.button-green-main {
+    background-color: #9AC31B;
+    border: 2px solid #9AC31B;
+    font-size: 16px;
+    border-radius: 10px;
+    padding: 16px 15px;
+    color: #fff;
+    outline: none;
+}
+
+.button-green-main:hover {
+    background-color: #fff;
+    color: #9AC31B;
+}
+
+.logo-block a:hover {
+    border-bottom-color: transparent;
+}
+
+.header-top-block {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+.header-contacts-block a {
+    display: inline-block;
+    margin: 0 20px;
+}
+
+.navbar-expand-md {
+    background-color: #2F4558;
+    border-radius: 10px;
+    padding: 10px 16px;
+    font-size: 16px;
+    margin-top: -30px;
+    z-index: 1;
+}
+
+.navbar-sub li:last-child {
+    margin-bottom: 0;
+}
+
+.dropdown-menu {
+    border-radius: 0px 10px 10px 10px;
+    box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.2);
+}
+
+.navbar-expand-md .navbar-nav {
+    width: 100%;
+    justify-content: space-around;
+}
+
+.main-banner-block {
+    margin-top: -30px;
+    position: relative;
+}
+
+.main-banner-block img {
+    width: 100%;
+}
+
+.main-banner-text {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 90px;
+}
+
+.main-banner-text h1 {
+    font-size: 78px;
+    color: #2F4558;
+    font-weight: bold;
+}
+
+.main-banner-text span {
+    font-size: 32px;
+    color: #2F4558;
+    font-weight: bold;
+}
+
 .footer-page {
     background-color: #5c7284;
     padding: 40px 0;
@@ -131,6 +219,11 @@ button.btn-close {
     margin-bottom: 10px;
 }
 
+.shadow-container {
+    box-shadow: 0px 14px 15px -5px rgba(0, 0, 0, 0.2);
+    padding: 20px 0 50px 0;
+}
+
 .breadcrumb-item.active {
     color: #5c7284;
 }
@@ -138,10 +231,53 @@ button.btn-close {
 
 @media(max-width:1199px) {}
 
-@media(max-width: 991px) {}
+@media(max-width: 991px) {
+    .navbar-expand-md {
+        font-size: 14px;
+    }
 
-@media(max-width: 767px) {}
+    .header-contacts-block a {
+        margin: 10px 15px 0 20px;
+    }
+}
+
+@media(max-width: 767px) {
+    .navbar-expand-md {
+        justify-content: flex-end;
+    }
+
+    .navbar-dark .navbar-toggler {
+        border: 2px solid #fff;
+    }
+
+    .header-top-block {
+        flex-wrap: wrap;
+    }
+
+    .header-top-block div {
+        margin-bottom: 10px;
+    }
+
+    .header-top-button {
+        width: 100%;
+        text-align: right;
+    }
+
+    .main-banner-block img {
+        max-width: 100%;
+        object-fit: cover;
+        height: 444px;
+    }
+
+    .main-banner-text h1 {
+        font-size: 50px;
+    }
+}
 
 @media (max-width: 600px) {}
 
-@media (max-width: 500px) {}
+@media (max-width: 500px) {
+    .main-banner-text h1 {
+        font-size: 44px;
+    }
+}
