--- a/css/style.css
+++ b/css/style.css
@@ -315,8 +315,8 @@ button.btn-close {
 
 .catalog-set-block {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 50px;
+    justify-content: flex-start;
+    margin: 0 -15px 30px -15px;
     flex-wrap: wrap;
 }
 
@@ -327,6 +327,7 @@ button.btn-close {
     background-color: #fff;
     box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.2);
     padding: 20px 11px;
+    margin: 0 15px 40px 15px;
 }
 
 .catalog-item:hover {
@@ -568,6 +569,10 @@ button.btn-close {
     font-weight: bold;
 }
 
+.catalog-image {
+    margin-bottom: 20px;
+}
+
 @media(max-width:1199px) {
     .feedback-dealers-form input {
         margin-bottom: 20px;
@@ -575,6 +580,14 @@ button.btn-close {
 
     .feedback-dealers-form {
         padding: 0 20px;
+    }
+
+    .catalog-set-block {
+        margin: 0 -12px 30px -12px;
+    }
+
+    .catalog-item {
+        margin: 0 12px 40px 12px;
     }
 }
 
@@ -606,6 +619,14 @@ button.btn-close {
 
     .footer-links {
         margin-right: 15px;
+    }
+
+    .catalog-set-block {
+        margin: 0 -10px 30px -10px;
+    }
+
+    .catalog-item {
+        margin: 0 10px 40px 10px;
     }
 }
 
@@ -684,6 +705,10 @@ button.btn-close {
 
     .questions-form form {
         flex-wrap: wrap;
+    }
+
+    .catalog-set-block {
+        justify-content: space-between;
     }
 }
 
