--- a/css/style.css
+++ b/css/style.css
@@ -718,6 +718,73 @@ button.btn-close {
     border-bottom: none;
 }
 
+.news-block-flex {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.news-block-img {
+    width: 280px;
+    height: 190px;
+    margin-right: 30px;
+}
+
+.news-block-img img {
+    object-fit: cover;
+    max-width: 100%;
+    height: 100%;
+}
+
+.news-block-date {
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.news-block-title {
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.btn-left-pagination span {
+    margin-right: 0;
+    margin-left: 15px;
+}
+
+.pagination-buttons {
+    margin: 50px 0;
+}
+
+.news-image-item img {
+    max-width: 100%;
+}
+
+.news-image-item {
+    margin-bottom: 40px;
+}
+
+.news-body {
+    margin-bottom: 40px;
+}
+
+.interesting-more-news {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px 0;
+}
+
+.interesting-more-news .news-block-flex {
+    width: 23%;
+    display: block;
+    margin-bottom: 50px;
+}
+
+.interesting-more-news .news-block-img {
+    margin-bottom: 20px;
+    margin-right: 0;
+    width: 100%;
+}
+
 @media(max-width:1199px) {
     .feedback-dealers-form input {
         margin-bottom: 20px;
@@ -776,6 +843,10 @@ button.btn-close {
 
     .infograph-block {
         width: 100%;
+    }
+
+    .interesting-more-news .news-block-img {
+        height: 100px;
     }
 }
 
@@ -868,6 +939,18 @@ button.btn-close {
         width: 48%;
         margin-bottom: 20px;
     }
+
+    .interesting-more-news {
+        flex-wrap: wrap;
+    }
+
+    .interesting-more-news .news-block-flex {
+        width: 48%;
+    }
+
+    .interesting-more-news .news-block-img img {
+        height: 100px;
+    }
 }
 
 @media (max-width: 600px) {
@@ -878,6 +961,10 @@ button.btn-close {
     .questions-form input {
         width: 100%;
         margin-right: 0;
+    }
+
+    .news-block-img img {
+        height: auto;
     }
 }
 
@@ -919,4 +1006,5 @@ button.btn-close {
     .contacts-item-flex div:first-child {
         font-weight: bold;
     }
+
 }
